--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -11,46 +11,53 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:padding="20dp">
+        android:padding="@dimen/table_padding">
 
-        <TableRow>
+        <TableRow
+            android:gravity="center">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
                 android:layout_weight="1"
                 android:gravity="center"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                android:layout_margin="@dimen/table_item_margin"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/unistream_column_name" />
+                android:text="@string/unistream_column_name"
+                android:layout_margin="@dimen/table_item_margin"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/rico_column_name" />
+                android:text="@string/rico_column_name"
+                android:layout_margin="@dimen/table_item_margin"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/result_column_name" />
+                android:text="@string/result_column_name"
+                android:layout_margin="@dimen/table_item_margin"/>
         </TableRow>
 
-        <TableRow>
+        <TableRow
+            android:gravity="center">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/usd_row_name" />
+                android:text="@string/usd_row_name"
+                android:layout_margin="@dimen/table_item_margin"/>
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_input_usd_uni_ratio"
@@ -59,7 +66,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:inputType="numberDecimal"
-                android:minWidth="30dp" />
+                android:layout_margin="@dimen/table_item_margin"/>
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_input_usd_rico_ratio"
@@ -68,23 +75,27 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:inputType="numberDecimal"
-                android:minWidth="30dp" />
+                android:layout_marginLeft="@dimen/table_item_margin"
+                android:layout_marginRight="@dimen/table_item_margin" />
 
             <TextView
                 android:id="@+id/text_usd_ratio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center" />
+                android:gravity="center"
+                android:layout_margin="@dimen/table_item_margin"/>
         </TableRow>
 
-        <TableRow>
+        <TableRow
+            android:gravity="center">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/euro_row_name" />
+                android:text="@string/euro_row_name"
+                android:layout_margin="@dimen/table_item_margin"/>
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_input_euro_uni_ratio"
@@ -93,7 +104,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:inputType="numberDecimal"
-                android:minWidth="30dp" />
+                android:layout_margin="@dimen/table_item_margin"/>
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_input_euro_rico_ratio"
@@ -102,23 +113,26 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:inputType="numberDecimal"
-                android:minWidth="30dp" />
+                android:layout_margin="@dimen/table_item_margin"/>
 
             <TextView
                 android:id="@+id/text_euro_ratio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center" />
+                android:gravity="center"
+                android:layout_margin="@dimen/table_item_margin"/>
         </TableRow>
 
-        <TableRow>
+        <TableRow
+            android:gravity="center">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/gel_row_name" />
+                android:text="@string/gel_row_name"
+                android:layout_margin="@dimen/table_item_margin"/>
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_input_gel_uni_ratio"
@@ -127,7 +141,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:inputType="numberDecimal"
-                android:minWidth="30dp" />
+                android:layout_margin="@dimen/table_item_margin"/>
 
             <TextView
                 android:id="@+id/text_gel_rico_ratio"
@@ -135,16 +149,15 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:editable="false"
-                android:inputType="none"
-                android:minWidth="30dp" />
+                android:layout_margin="@dimen/table_item_margin"/>
 
             <TextView
                 android:id="@+id/text_gel_ratio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center" />
+                android:gravity="center"
+                android:layout_margin="@dimen/table_item_margin"/>
         </TableRow>
     </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
