--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="table_padding">20dp</dimen>
+    <dimen name="table_item_margin">10dp</dimen>
 </resources>
